--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,6 +20,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyB-T7G05PGbsOzy99CqMWEUuaRHyKQbzyo",
+        authDomain: "connecting-miami-to-the-world.firebaseapp.com",
+        databaseURL: "https://connecting-miami-to-the-world.firebaseio.com",
+        projectId: "connecting-miami-to-the-world",
+        storageBucket: "connecting-miami-to-the-world.appspot.com",
+        messagingSenderId: "516476440799"
+      };
+    </script>
+    <script src="https://www.gstatic.com/firebasejs/5.10.1/firebase.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
